--- a/package.json
+++ b/package.json
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.8",
+    "autoprefixer": "^10.4.20",
+    "framer-motion": "^11.11.7",
+    "nextui-cli": "^0.3.4",
+    "postcss": "^8.4.47",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "sass": "^1.79.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -23,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.4.8"
   }
 }
