--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "framer-motion": "^11.11.7",
     "nextui-cli": "^0.3.4",
     "postcss": "^8.4.47",
+    "query-string": "^9.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
-    "sass": "^1.79.4"
+    "sass": "^1.79.4",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
